--- a/MyFantaManager/Views/Home/Index.cshtml
+++ b/MyFantaManager/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     </div>
     
     <div class="col-md-12">
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-4 ng-class: {hidden: ctrl.printEnabled}">
             <div class="row">
                 <h3>Filtri</h3>
                 <div class="row" style="margin-bottom: 15px; margin-left: 0px !important">
@@ -42,7 +42,7 @@
                 <button class="btn btn-link" type="button" ng-click="ctrl.print()"><span class="glyphicon glyphicon-print"></span> Stampa</button>
             </div>
         </div>
-        <div class="col-xs-12 col-md-8">
+        <div class="col-xs-12 ng-class: {'col-md-8': !ctrl.printEnabled, 'col-md-12': ctrl.printEnabled}">
             <table class="table table-striped">
                 <thead>
                     <tr>
