--- a/MyFantaManager/Views/Shared/_Layout.cshtml
+++ b/MyFantaManager/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - MyFantaManager</p>
+            <p style="margin-left: 15px">&copy; 2017 - MyFantaManager</p>
         </footer>
     </div>
 
