aggiornati giocatori al 16-08. Ottimizzata visualizzazione da smartphone

--- a/MyFantaManager/Views/Home/Index.cshtml
+++ b/MyFantaManager/Views/Home/Index.cshtml
@@ -11,6 +11,11 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="glyphicon glyphicon-filter" style="font-size: 20px"></span>
                 </button>
+                <div style="float: left">
+                    <h3 style="margin-bottom: -10px !important;margin-top: 10px;">Lista Calciatori</h3>
+                    <h6>aggiornata al 16/08/2017</h6>
+                </div>
+                
                 <p style="float: right;margin-right: 5px;font-weight: bold;margin-top: 21px;font-size: 16px;">Filtra </p>
             </div>
             <div class="collapse navbar-collapse" aria-expanded="false" style="border-color: transparent !important; overflow: hidden">
@@ -58,9 +63,9 @@
     </nav>
     <!-- /.navbar -->
 
-    <div class="row text-center">
+    <div class="hidden-xs row text-center">
         <h1>Lista Calciatori</h1>
-        <h5>aggiornata al 10/08/2017</h5>
+        <h5>aggiornata al 16/08/2017</h5>
     </div>
     
     <div class="col-md-12">
