aggiunto bottone per il back to top

--- a/MyFantaManager/Views/Home/Index.cshtml
+++ b/MyFantaManager/Views/Home/Index.cshtml
@@ -143,6 +143,9 @@
         </div>
         
     </div>
+
+    <button class="btn btn-primary" id="scrollBtn" title="Go To Top"><span class="glyphicon glyphicon-menu-up"></span></button>
+
 </div>
 
 
