--- a/MyFantaManager/Views/Shared/_Layout.cshtml
+++ b/MyFantaManager/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
     <environment names="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-       
+        <script src="~/app/app.js"></script>
         <script src="~/app/main.js"></script>
     </environment>
     <environment names="Staging,Production">
@@ -49,6 +49,7 @@
                 crossorigin="anonymous"
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
+        <script src="~/app/app.js"></script>
         <script src="~/app/main.js"></script>
     </environment>
 
