--- a/MyFantaManager/wwwroot/css/site.css
+++ b/MyFantaManager/wwwroot/css/site.css
@@ -48,6 +48,24 @@ textarea {
     font-weight: bold
 }
 
+#scrollBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    border-radius: 50px;
+}
+
+#scrollBtn:hover{
+    background-color: dimgray !important;
+}
+
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
     /* Hide captions */
